@@ -24,6 +24,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -79,7 +80,8 @@ public class DashboardClaimInfoService {
 
     private List<DashboardClaimInfo> getClaimsForClaimant(String authorisation, String claimantId) {
         log.info("-----------calling ocmc claimant claims-------------");
-        return claimStoreService.getClaimsForClaimant(authorisation, claimantId);
+        List<DashboardClaimInfo> ocmcClaims = claimStoreService.getClaimsForClaimant(authorisation, claimantId);
+        return ocmcClaims;
     }
 
     private List<DashboardClaimInfo> getDashboardItemsForCurrentPage(List<DashboardClaimInfo> ocmcClaims,
@@ -112,7 +114,7 @@ public class DashboardClaimInfoService {
     private List<DashboardClaimInfo> sortOcmcCases(List<DashboardClaimInfo> ocmcCases) {
         return ocmcCases.stream()
             .sorted(Comparator.comparing(DashboardClaimInfo::getCreatedDate).reversed())
-            .toList();
+            .collect(Collectors.toList());
     }
 
     private List<DashboardClaimInfo> translateSearchResultToDashboardItems(SearchResult claims, boolean isClaimant) {
@@ -124,7 +126,7 @@ public class DashboardClaimInfoService {
                 caseDetails,
                 isClaimant
             ))
-            .toList();
+            .collect(Collectors.toList());
     }
 
     private DashboardClaimInfo translateCaseDataToDashboardClaimInfo(CaseDetails caseDetails, boolean isClaimant) {
